examples/test/testpolicy2949.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2949
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key37: value18
      key25: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value41
          key18: value20
      podSelector:
        matchLabels:
          key38: value42
